RESOLVED FIXED95447
[BlackBerry] One shot drawing sync flag never cleared when there's no layers
https://bugs.webkit.org/show_bug.cgi?id=95447
Summary [BlackBerry] One shot drawing sync flag never cleared when there's no layers
Arvid Nilsson
Reported 2012-08-30 05:01:01 PDT
When we remove the layers, WebKit could tell us we need a one shot drawing sync to repaint the BackingStore with the content that was previously drawn by layers. We also sometimes set the one shot drawing sync flag manually. We would bail from commit if there were no layers and not actually perform the osds, so it left the osds flag set forever and the situation prevails, because nobody will ever clear the osds flag. No commit means no blit, and the result of regular rendering does not show up on screen.
Attachments
Patch (2.58 KB, patch)
2012-08-30 05:22 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-08-30 05:17:23 PDT
PR 199866
Arvid Nilsson
Comment 2 2012-08-30 05:22:14 PDT
WebKit Review Bot
Comment 3 2012-08-30 08:06:25 PDT
Comment on attachment 161447 [details] Patch Clearing flags on attachment: 161447 Committed r127141: <http://trac.webkit.org/changeset/127141>
WebKit Review Bot
Comment 4 2012-08-30 08:06:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.